<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/tan_background"
    android:padding="@dimen/activity_margin"
    tools:context=".Editor">



    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:text="Name"
            style="@style/CategoryStyle" />
        <EditText
            android:id="@+id/edit_student_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_student_name"
            android:inputType="textCapWords"
            android:layout_width="0dp"
            android:layout_weight="2"/>

    </LinearLayout>




    <LinearLayout
        android:id="@+id/container_branch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_branch"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_branch"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"
                />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/container_roll_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_roll_no"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_student_roll_no"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_roll_no"
                android:inputType="number" />


        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/container_semester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_semester"
            style="@style/CategoryStyle" />


        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_semester"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"
                />
        </LinearLayout>



    </LinearLayout>







</LinearLayout>